# ProyectoRepaso

admin/: README.md  app.py  pyproject.toml
admin/public/: style.css
admin/src/core/: database.py  seeds.py
admin/src/core/auth/: __init__.py  user.py
admin/src/core/board/: __init__.py  issue.py  labels.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: auth.py  issues.py
admin/src/web/helpers/: handlers.py
admin/src/web/templates/: home.html  layout.html
admin/src/web/templates/auth/: login.html
admin/src/web/templates/issues/: index.html
admin/tests/: test_web.py
