[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Nicolas De Rose <nicoderose_mg@hotmail.com.ar>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
psycopg2 = "^2.9.4"
psycopg2-binary = "^2.9.4"
flask-sqlalchemy = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
